...

@Composable
internal fun AboutSettingsPage(back: () -> Unit) {
    Column(modifier = Modifier.fillMaxSize()) {
        SettingsTopAppBar(
            title = "About Reprise",
            backContentDescription = "Back to Settings",
            back = back,
        )
        LazyColumn(
            modifier = Modifier
                .fillMaxSize()
                .padding(horizontal = 16.dp),
...
